<resources>
    <string name="app_name">Salon Time</string>
    <string name="title_activity_maps">Salon Time</string>
    <string name="add_salone_button">Add salon</string>
    <string name="salon_name">Name</string>
    <string name="save_btn_text">Save</string>
    <string name="add_edit_name_txt">Salon name</string>
    <string name="add_edit_salond_description_txt">Description</string>
    <string name="add_edit_save_btn_text">Save</string>
    <string name="add_edit_header">Salon</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_login_text">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="create_user_view_btn">Create user</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="signup_name_text">Name</string>
    <string name="password_repeat">Password repeat</string>
    <string name="save_btn">Save</string>
    <string name="menu_logout_text">Your Profile</string>
    <string name="menu_nav_bar_text">Show Navigation Bar</string>
    <string name="title_activity_user"></string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">User</string>
    <string name="title_salons">My Salons</string>
    <string name="salon_image">Salon image</string>
    <string name="add_salon">Add salon</string>
    <string name="contact_phone">Phone number</string>
    <string name="mens_average_price_text">Male average price €</string>
    <string name="female_avarge_price_text">Female avarege price €</string>
    <string name="heading_text">Heading</string>
    <string name="phone_number_text">+372 56 929 117</string>
    <string name="set_location_text">Set Location</string>
    <string name="edit">Edit</string>
    <string name="create_text">create</string>
    <string name="logout_tex">Log out</string>
    <string name="favorite_text">Favorite</string>
    <string name="add_service_text">Add service</string>
    <string name="homepage">Web site</string>
    <string name="email">E-mail</string>
    <string name="service">Service name</string>
    <string name="price">Price €</string>
    <string name="SALON_NAME">name</string>
    <string name="comment">Comment</string>
</resources>
