<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/add_edit_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:context=".activity.MapsActivity" />

    <EditText
        android:id="@+id/create_salon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_edit_name_txt"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/create_salon_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_edit_salond_description_txt"
        android:inputType="textMultiLine"
        tools:text="@string/add_edit_salond_description_txt" />

    <Button
        android:id="@+id/add_edit_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_edit_save_btn_text"
        android:text="@string/add_edit_save_btn_text"
        tools:text="@string/add_edit_save_btn_text" />

</LinearLayout>