<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="none">

        <com.google.android.gms.maps.MapView
            android:id="@+id/create_salon_map"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/create_salon_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_location" />

        <EditText
            android:id="@+id/create_salon_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/add_edit_name_txt"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_salon_map" />

        <EditText
            android:id="@+id/create_salon_phone"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/contact_phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_salon_description" />

        <EditText
            android:id="@+id/create_salon_men_avarge_price"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/mens_average_price_text"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_salon_phone" />

            <EditText
                android:id="@+id/create_salon_female_avarge_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/female_avarge_price_text"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_salon_men_avarge_price" />

            <Button
                android:id="@+id/create_salon_save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_edit_save_btn_text"
                android:text="@string/add_edit_save_btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_salon_female_avarge_price"
                tools:text="@string/add_edit_save_btn_text" />

            <EditText
                android:id="@+id/create_salon_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/add_edit_salond_description_txt"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_salon_name" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>